--- a/pages/components/_menu.less
+++ b/pages/components/_menu.less
@@ -1,6 +1,7 @@
 .vo_menu {
     padding: 0;
     transition: .3s all;
+    margin: 3rem 0 0;
 
     li {
         list-style: none;
